--- a/task0001/1.7/gallery.html
+++ b/task0001/1.7/gallery.html
@@ -21,9 +21,47 @@
         </div>
 
         <div class="galleryContext">
+            <div class="tabNav">
+                <div class="tabNav1 tab">
+                    <h6>ALL</h6>
+                </div>
+                <div class="tabNav2 tab">
+                    <h6>JavaScript Util Functions</h6>
+                </div>
+                <div class="tabNav3 tab">
+                    <h6>UI Components</h6>
+                </div>
+                <div class="tabNav4 tab">
+                    <h6>Apllications</h6>
+                </div>
+                <div class="tabNav5 tab">
+                    <h6>ALL</h6>
+                </div>
+            </div>
+
             <div class="galleryMain">
                 <div class="waterfallsFlow">
-
+                    <div class="block">
+                        <div class="leftBlock">
+                            <img src="img/city2.jpg" style="width: 320px; height: 200px;" />
+                            <div class="leftLeftBlock">
+                                <img src="img/city1.jpg" style="width: 155px; height: 100px;" />
+                                <img src="img/city2.jpg" style="width: 155px; height: 80px;" />
+                            </div>
+                            <div class="leftRightBlock">
+                                    <img src="img/city3.jpg" style="width: 155px; height: 130px;" />
+                            </div>
+                        </div>
+                        <div class="centerBlock">
+                            <img src="img/city3.jpg" style="width: 157px; height: 160px;" />
+                            <img src="img/city1.jpg" style="width: 157px; height: 180px;" />
+                            <img src="img/city3.jpg" style="width: 157px; height: 180px;" />
+                        </div>
+                        <div class="rightBlock">
+                            <img src="img/city1.jpg" style="width: 157px; height: 180px;" />
+                            <img src="img/city3.jpg" style="width: 157px; height: 160px;" />
+                        </div>
+                    </div>
                 </div>
                 <div class="rightBar">
                     <div class="search">
@@ -31,10 +69,41 @@
                         <div id="enter">GO</div> 
                     </div>
                     <div class="rank">
-                        
+                        <p>人气排行榜</p>
+                        <div class="rankRoll">
+                            <div class="rankNum">1</div>
+                            <div class="rankColor"></div>
+                            <div class="rankName">ui.tree</div>
+                        </div>
+                        <div class="rankRoll">
+                            <div class="rankNum">1</div>
+                            <div class="rankColor"></div>
+                            <div class="rankName">ui.tree</div>
+                        </div>
+                        <div class="rankRoll">
+                            <div class="rankNum">1</div>
+                            <div class="rankColor"></div>
+                            <div class="rankName">ui.tree</div>
+                        </div>
+                        <div class="rankRoll">
+                            <div class="rankNum">1</div>
+                            <div class="rankColor"></div>
+                            <div class="rankName">ui.tree</div>
+                        </div>
+                        <div class="rankRoll">
+                            <div class="rankNum">1</div>
+                            <div class="rankColor"></div>
+                            <div class="rankName">ui.tree</div>
+                        </div>
                     </div>
                 </div>
+
+                <div class="more">
+                    点击显示更多
+                </div>
             </div>
+
+
         </div>
 
         <div class="footer">
