--- a/task0001/1.7/gallery.html
+++ b/task0001/1.7/gallery.html
@@ -43,23 +43,23 @@
                 <div class="waterfallsFlow">
                     <div class="block">
                         <div class="leftBlock">
-                            <img src="img/city2.jpg" style="width: 320px; height: 200px;" />
+                            <img src="img/city2.jpg" class="imgHeightLev1" />
                             <div class="leftLeftBlock">
-                                <img src="img/city1.jpg" style="width: 155px; height: 100px;" />
-                                <img src="img/city2.jpg" style="width: 155px; height: 80px;" />
+                                <img src="img/city1.jpg" class="imgHeightLev2"  />
+                                <img src="img/city2.jpg" class="imgHeightLev4"  />
                             </div>
                             <div class="leftRightBlock">
-                                    <img src="img/city3.jpg" style="width: 155px; height: 130px;" />
+                                    <img src="img/city3.jpg" class="imgHeightLev2"  />
                             </div>
                         </div>
                         <div class="centerBlock">
-                            <img src="img/city3.jpg" style="width: 157px; height: 160px;" />
-                            <img src="img/city1.jpg" style="width: 157px; height: 180px;" />
-                            <img src="img/city3.jpg" style="width: 157px; height: 180px;" />
+                            <img src="img/city3.jpg" class="imgHeightLev3"  />
+                            <img src="img/city1.jpg" class="imgHeightLev4"  />
+                            <img src="img/city3.jpg" class="imgHeightLev2"  />
                         </div>
                         <div class="rightBlock">
-                            <img src="img/city1.jpg" style="width: 157px; height: 180px;" />
-                            <img src="img/city3.jpg" style="width: 157px; height: 160px;" />
+                            <img src="img/city1.jpg" class="imgHeightLev1" />
+                            <img src="img/city3.jpg" class="imgHeightLev2"  />
                         </div>
                     </div>
                 </div>
@@ -72,28 +72,38 @@
                         <p>人气排行榜</p>
                         <div class="rankRoll">
                             <div class="rankNum">1</div>
-                            <div class="rankColor"></div>
-                            <div class="rankName">ui.tree</div>
+                            <div class="rankColor">
+                                <div class="rankBar1"></div>
+                            </div>
+                            <div class="rankName">Ui.tree</div>
                         </div>
                         <div class="rankRoll">
-                            <div class="rankNum">1</div>
-                            <div class="rankColor"></div>
-                            <div class="rankName">ui.tree</div>
+                            <div class="rankNum">2</div>
+                            <div class="rankColor">
+                                <div class="rankBar2"></div>
+                            </div>
+                            <div class="rankName">Util.trim</div>
                         </div>
                         <div class="rankRoll">
-                            <div class="rankNum">1</div>
-                            <div class="rankColor"></div>
-                            <div class="rankName">ui.tree</div>
+                            <div class="rankNum">3</div>
+                            <div class="rankColor">
+                                <div class="rankBar3"></div>
+                            </div>
+                            <div class="rankName">app.todo</div>
                         </div>
                         <div class="rankRoll">
-                            <div class="rankNum">1</div>
-                            <div class="rankColor"></div>
-                            <div class="rankName">ui.tree</div>
+                            <div class="rankNum">4</div>
+                            <div class="rankColor">
+                                <div class="rankBar4"></div>
+                            </div>
+                            <div class="rankName">Ui.tab</div>
                         </div>
                         <div class="rankRoll">
-                            <div class="rankNum">1</div>
-                            <div class="rankColor"></div>
-                            <div class="rankName">ui.tree</div>
+                            <div class="rankNum">5</div>
+                            <div class="rankColor">
+                                <div class="rankBar5"></div>
+                            </div>
+                            <div class="rankName">Util.AddClass</div>
                         </div>
                     </div>
                 </div>
